--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap&subset=latin-ext');
 
+html,
 body {
-  /* margin: 0; */
+  display: flex;
+  flex-direction: column;
+}
+
+body {
+  
   font-family: 'Montserrat', sans-serif;
   background-color: mintcream;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,6 +15,8 @@ body {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 /* code {
